# app/Http/Requests/RegisterRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Requests;
 
+use App\RoleEnum;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
 
@@ -15,11 +16,11 @@ class RegisterRequest extends FormRequest
     public function rules(): array
     {
         $rules = [
-            'type' => ['required', Rule::in(['1', '3'])],
+            'type' => ['required', 'integer', Rule::in([RoleEnum::STUDENT->value, RoleEnum::COMPANY->value])],
         ];
 
         switch ($this->input('type')) {
-            case '1':
+            case RoleEnum::STUDENT->value:
                 $rules = array_merge($rules, [
                     'first_name' => 'required|string|max:255',
                     'last_name' => 'required|string|max:255',
@@ -32,17 +33,18 @@ class RegisterRequest extends FormRequest
                     'primary_email' => 'required|nullable|email',
                     'phone' => 'required|string|max:20',
                     'address' => 'required|string|max:255',
-                    'study_program' => 'required|exists:study_programs,name'
+                    'study_program' => 'required|exists:study_programs,id'
                 ]);
                 break;
 
-            case '3':
+            case RoleEnum::COMPANY->value:
                 $rules = array_merge($rules, [
                     'name' => 'required|string|max:255',
                     'address' => 'required|string|max:255',
                     'contact_name' => 'required|string|max:255',
                     'contact_email' => 'required|email|unique:companies,contact_email',
-                    'contact_phone' => 'nullable|string|max:20',
+                    'contact_phone' => 'required|string|max:20',
+                    'password' => 'required|string|min:8', // пароль обязателен для компании
                 ]);
                 break;
         }
